server.log

> rest-express@1.0.0 dev
> NODE_ENV=development tsx server/index.ts

/opt/techmotor/shared/routes.ts:3
  insertClientSchema, clients,
  ^
SyntaxError: The requested module './schema' does not provide an export named 'insertClientSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.2
